<resources>
    <string name="app_name">SignUpForm</string>

    <string name="action_settings">Settings</string>
    <string name="user">Username:</string>
    <string name="user_hint">Please enter your username</string>
    <string name="submit">Submit</string>
    <string name="pass">Password:</string>
    <string name="pass_hint">Please enter your password</string>
    <string name="re_pass">Re-Password:</string>
    <string name="re_pass_hint">Please re-enter your password</string>
    <string name="random">Random</string>

</resources>
