<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/user" />

            <EditText
                android:id="@+id/user_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user"
                android:layout_weight="75"
                android:hint="@string/user_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pass_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/user_field">

            <TextView
                android:id="@+id/pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/pass" />

            <EditText
                android:id="@+id/pass_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/pass"
                android:layout_weight="75"
                android:hint="@string/pass_hint" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/re_pass_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/user_field">

            <TextView
                android:id="@+id/re-pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/re_pass" />

            <EditText
                android:id="@+id/re_pass_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/pass"
                android:layout_weight="75"
                android:hint="@string/re_pass_hint" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/user_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/fields"
        android:layout_below="@id/fields"
        android:text="@string/submit" />

</RelativeLayout>
